(library
 (name specs)
 (modules Solver
          SolverZ3
          Lexer
          Parser
          Syntax
          Compile
          Bmc
          Smtlib
 )
 (libraries smtlib-utils z3 batteries ctypes.foreign)
; (flags :standard -cclib -lmathsat)
)

(menhir
  (modules parser)
)

(ocamllex lexer)
